Mon May 23 09:45:26 2011  Hiroshi Nakamura  <nahi@ruby-lang.org>

	* include/ruby/defines.h (CASEFOLD_FILESYSTEM): Revert r30508. Forgot to
	  include this file in the commit r31692. __APPLE__ is not
	  CASEFOLD_FILESYSTEM again, from this time.

Mon May 23 10:01:02 2011  Martin Bosslet  <Martin.Bosslet@googlemail.com>

	* ext/openssl/ossl_asn1.c: Do not parse zero-tagged values as EOC. Do
	not let current length become negative for infinite length constructed
	values. Support constructed values of length zero. Added tests.

Mon May 23 09:19:53 2011  Eric Hodel  <drbrain@segment7.net>

	* lib/net/smtp.rb:  Document Net::SMTP::Response.  Patch by J.R. Garcia.
	  [Ruby 1.9 - Bug #4768]

Mon May 23 09:03:52 2011  Shota Fukumori  <sorah@tubusu.net>

	* lib/test/unit/parallel.rb: Never Ignore SIGINT. When received
	Interrupt, immediately puts result and exit. [ruby-dev:43571]

	* lib/test/unit.rb: When received Interrupt, wait results from workers
	and collect them. [ruby-dev:43571]

Mon May 23 09:08:07 2011  Eric Hodel  <drbrain@segment7.net>

	* lib/mathn.rb:  Improve documentation.  Patch by Sandor Szucs.
	  [Ruby 1.9 - Bug #4767]

Mon May 23 08:45:55 2011  Eric Hodel  <drbrain@segment7.net>

	* lib/ostruct.rb:  Improve documentation.  Patch by Franklin Webber.
	  [Ruby 1.9 - Bug #4761]

Mon May 23 08:35:24 2011  Eric Hodel  <drbrain@segment7.net>

	* hash.c:  Improve documentation of Hash#key.  Patch by Utkarsh
	  Kukreti.  [Ruby 1.9 - Bug #4760]

Mon May 23 08:32:59 2011  Eric Hodel  <drbrain@segment7.net>

	* enumerator.c:  Improve documentation.  Patch by Dave Copeland.
	  [Ruby 1.9 - Bug #4757]

Mon May 23 07:19:45 2011  Martin Bosslet  <Martin.Bosslet@googlemail.com>

	* NEWS (openssl): Infinite length support. Different behavior of
	Constructive and Primitive constructors.

Mon May 23 06:58:33 2011  Martin Bosslet  <Martin.Bosslet@googlemail.com>

	* ext/openssl/ossl_asn1.c: Forbid Constructives whose value is not an
	Array to prevent segfault. Added test.
